logs/validate.20260408-031631.log
Mode: isolate
Isolate: including Chap19 Chap02
error: unexpected token, expected `;`
    --> src/Chap19/ArraySeqMtEph.rs:1336:54
     |
1336 |                         0 <= i < filtered.spec_len() implies
     |                                                      ^^^^^^^

error[E0425]: cannot find type `ArraySeqMtEphS` in this scope
    --> src/Chap19/ArraySeqMtEph.rs:1831:30
     |
1831 |     impl<T: Debug> Debug for ArraySeqMtEphS<T> {
     |                              ^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `ArraySeqMtEphS` in this scope
    --> src/Chap19/ArraySeqMtEph.rs:1837:34
     |
1837 |     impl<T: Display> Display for ArraySeqMtEphS<T> {
     |                                  ^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `ArraySeqMtEphIter` in this scope
    --> src/Chap19/ArraySeqMtEph.rs:1848:34
     |
1848 |     impl<'a, T: Debug> Debug for ArraySeqMtEphIter<'a, T> {
     |                                  ^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `ArraySeqMtEphIter` in this scope
    --> src/Chap19/ArraySeqMtEph.rs:1854:29
     |
1854 |     impl<'a, T> Display for ArraySeqMtEphIter<'a, T> {
     |                             ^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `ArraySeqMtEphGhostIterator` in this scope
    --> src/Chap19/ArraySeqMtEph.rs:1860:27
     |
1860 |     impl<'a, T> Debug for ArraySeqMtEphGhostIterator<'a, T> {
     |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `ArraySeqMtEphGhostIterator` in this scope
    --> src/Chap19/ArraySeqMtEph.rs:1866:29
     |
1866 |     impl<'a, T> Display for ArraySeqMtEphGhostIterator<'a, T> {
     |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 1s
Sampled Memory Usage: peak rust_verify RSS: 0MB, peak z3 RSS: 0MB, min free: 23126MB
Sampled CPU Usage: rust_verify: 0s, z3 children: 0s
